Updated Checkstyle